# JLE

./: .gitignore  README.md  pyproject.toml
JLE/: __init__.py  version.py
JLE/core/: __init__.py  ainfo.py  basearray.py  config.py  distribution_spec.py  dtypes.py  errors.py  hardware_utils.py  jle_backend_connector.py  memory.py  mesh.py  named_sharding.py  sharding.py  typing.py  utils.py  xla_op_shardings.py
JLE/core/jaxlib/: __init__.py
miniJax/: __init__.py  version.py
miniJax/core/: __init__.py  config.py  dtypes.py  errors.py  typing.py
