[project]
name = "miniJax"
version = "0.1.0"
description = "miniJax - minimal version of JAX building mostly for ml research"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "jaxlib>=0.6.2",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
# Project managed by uv; defaults are fine


[tool.hatch.build.targets.wheel]
packages = ["minijax"]

[tool.hatch.build.targets.sdist]
include = ["minijax"]

