[project]
name = "JLE"
version = JLE.version
description = "JLE(JAX Like Engine)"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "jaxlib>=0.6.2",
    "ml-dtypes>=0.5.3",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
# Project managed by uv; defaults are fine


[tool.hatch.build.targets.wheel]
packages = ["JLE"]

[tool.hatch.build.targets.sdist]
include = ["JLE"]
